New functions over how to become from XLSX to multidimensional NumPy array

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "12nx6q6z5ezu9cFD_oe0smE5bianCXjM9",
-      "authorship_tag": "ABX9TyNjhfZr/tEsWQyqflsxFrpk"
+      "authorship_tag": "ABX9TyNekPgJj3xAbFB/HLcSAqmm"
     },
     "kernelspec": {
       "name": "python3",
@@ -40,9 +39,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8cd569a3-ede6-43f3-df9d-e6bb63f4f473"
+        "outputId": "4dcc695d-f27c-47b6-f320-3d6b02f437ce"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,7 +50,7 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting polars\n",
             "  Downloading polars-0.15.8-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (14.6 MB)\n",
-            "\u001b[K     |████████████████████████████████| 14.6 MB 13.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 14.6 MB 4.1 MB/s \n",
             "\u001b[?25hRequirement already satisfied: typing_extensions>=4.0.0 in /usr/local/lib/python3.8/dist-packages (from polars) (4.4.0)\n",
             "Installing collected packages: polars\n",
             "Successfully installed polars-0.15.8\n",
@@ -75,7 +74,7 @@
       "metadata": {
         "id": "eHaH_2wu_Qk1"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -421,7 +420,7 @@
       "metadata": {
         "id": "2Q2lohlmFkUT"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -580,9 +579,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d0YKFvzWaoNa",
-        "outputId": "d014fb3b-0a70-48df-843a-d2e5c275bcec"
+        "outputId": "bb6f2a97-e3f8-4afc-cae9-cebc1436b835"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,8 +829,8 @@
         "    return False\n",
         "\n",
         "\n",
-        "## Removing comments head 1. By a row with contente between before and after blank line 2 and if it would be the first and unique column with data.\n",
         "\n",
+        "## Removing comments head 1. By a row with contente between before and after blank line 2 and if it would be the first and unique column with data.\n",
         "def remove_head_comments(work_book):\n",
         "  nrows = work_book.nrows\n",
         "  for index in range(0,len(work_book)):\n",
@@ -862,16 +861,12 @@
         "  for i in work_book.get_rows():\n",
         "    print(i)\n",
         "\n",
-        "\n",
         "def to_ndimention_xls(work_book):\n",
-        "  rack_book = np.array([])\n",
+        "  \"\"\" Proccessing data and giving Numpy array format \"\"\"\n",
+        "  rack_book = np.array(['']*work_book.ncols, dtype='<U32')\n",
         "  for i in range(work_book.nrows):\n",
-        "    rack_book = np.\n",
-        "    row = np.array(work_book.row_values(i))\n",
-        "    print(row.shape)\n",
-        "  #  rack_book = np.row_stack( ( rack_book , row ) )\n",
-        "  #return rack_book\n",
-        "\n",
+        "    rack_book = np.vstack( ( rack_book, np.array(work_book.row_values(i), dtype='<U32') ) )\n",
+        "  return rack_book[1:]\n",
         "\n",
         "################################################################################################################################################\n",
         "print(files.list_files[7])\n",
@@ -879,113 +874,14 @@
         "work_book = work_book.sheet_by_index(0)\n",
         "\n",
         "\n",
-        "print(\n",
-        "    type(\n",
-        "      to_ndimention_xls(work_book)\n",
-        "    )\n",
-        ")\n",
-        "\n"
+        "for i in to_ndimention_xls(work_book):\n",
+        "  print(i.tolist().count(''))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aAatn8wAYamA",
-        "outputId": "f1533853-fcc1-45c5-baf7-9bae9c68086f"
+        "id": "aAatn8wAYamA"
       },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/data_income/numero-productores-pueblos-originarios.xlsx\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "(20,)\n",
-            "<class 'NoneType'>\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
