Removing some comments and lines due to bugging, yet it works.

--- a/DW1___data_wrangling_with_Parallel_processing_PySpark.ipynb
+++ b/DW1___data_wrangling_with_Parallel_processing_PySpark.ipynb
@@ -9,8 +9,7 @@
         "z2CbVpvj-nT1",
         "YqiKcDajZqK0"
       ],
-      "mount_file_id": "14nb3iH0S8wtsEg8eIIMxWTdduIfezUbg",
-      "authorship_tag": "ABX9TyPiNREYo4HADjD4eno1Fobn"
+      "authorship_tag": "ABX9TyMbHC/TbevZw8TNkZEP+5L4"
     },
     "kernelspec": {
       "name": "python3",
@@ -53,21 +52,40 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lxei0oli5ZE3",
-        "outputId": "2df25252-341b-441e-a184-ea97804f2d2b"
+        "outputId": "702d9321-a078-473d-ac42-06303ae9c244"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pyspark in /usr/local/lib/python3.8/dist-packages (3.3.1)\n",
-            "Requirement already satisfied: py4j==0.10.9.5 in /usr/local/lib/python3.8/dist-packages (from pyspark) (0.10.9.5)\n",
+            "Collecting pyspark\n",
+            "  Downloading pyspark-3.3.1.tar.gz (281.4 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.4/281.4 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting py4j==0.10.9.5\n",
+            "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.7/199.7 KB\u001b[0m \u001b[31m12.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
+            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=2fb6b2b37921f1d2709cf9c9d5ae517c850c3d2e3ff0cfbd0e88e63fa5f4bd63\n",
+            "  Stored in directory: /root/.cache/pip/wheels/43/dc/11/ec201cd671da62fa9c5cc77078235e40722170ceba231d7598\n",
+            "Successfully built pyspark\n",
+            "Installing collected packages: py4j, pyspark\n",
+            "Successfully installed py4j-0.10.9.5 pyspark-3.3.1\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: findspark in /usr/local/lib/python3.8/dist-packages (2.0.1)\n",
+            "Collecting findspark\n",
+            "  Downloading findspark-2.0.1-py2.py3-none-any.whl (4.4 kB)\n",
+            "Installing collected packages: findspark\n",
+            "Successfully installed findspark-2.0.1\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: unidecode in /usr/local/lib/python3.8/dist-packages (1.3.6)\n"
+            "Collecting unidecode\n",
+            "  Downloading Unidecode-1.3.6-py3-none-any.whl (235 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m235.9/235.9 KB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: unidecode\n",
+            "Successfully installed unidecode-1.3.6\n"
           ]
         }
       ]
@@ -93,7 +111,7 @@
       "metadata": {
         "id": "LFcLG0zhIFoz"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +131,7 @@
         "id": "xm-zCwWR-sWy",
         "outputId": "e8786ff6-ff94-4358-bb66-ec4c3a32b520"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +159,7 @@
         },
         "outputId": "0a6dea81-3a65-4b03-a936-49055bfdb248"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +203,7 @@
       "metadata": {
         "id": "JSRzbYMLZvCM"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +219,7 @@
         "id": "QAsWQ7osZ6OU",
         "outputId": "df107ccb-a0a6-4273-e4d1-8123c907807f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +253,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3. Reading data"
+        "## Reading data"
       ],
       "metadata": {
         "id": "HOkuaK96Yj9U"
@@ -312,7 +330,6 @@
         "  \n",
         "  def get_header_dataframe(self):\n",
         "    \"\"\"Getting those columns with null field (in other words, headers)\"\"\"\n",
-        "    print(\">>>>>>>>>>  >>>>>>>>>>  >>>>>>>>>>  Proceso desconocido\")\n",
         "    cols = [F.col(c) for c in self.df_spark.columns]\n",
         "    \n",
         "    filter_expr = reduce(\n",
@@ -349,7 +366,7 @@
         "    head_df.show(truncate=False,n=20)\n",
         "\n",
         "    return head_df\n",
-        "  ################################################################################################################\n",
+        "  ############################################## NumPy process ########################################################\n",
         "  def filling_data(self, multi_array): \n",
         "    for row in multi_array:\n",
         "      last_value=None\n",
@@ -393,13 +410,11 @@
         "    b = b.replace('0_', '')\n",
         "    b = [ self.ascii_ignore(x) for x in b ]\n",
         "    return b\n",
-        "  ################################################################################################################\n",
+        "  ############################################## NumPy process ########################################################\n",
         "  \n",
         "  def get_header_np(self):\n",
         "    header_df = self.get_header_dataframe()\n",
         "    \n",
-        "    print(\"entrando\")\n",
-        "\n",
         "    header_np = np.array(header_df.select( header_df.columns ).collect())\n",
         "    header_np = self.mergin_rows(self.data_normalization(self.filling_data(header_np).astype(str)))\n",
         "    self.header_np = header_np\n",
@@ -414,8 +429,6 @@
         "    columns = self.df_spark.columns\n",
         "    self.get_header_np()\n",
         "\n",
-        "    print(self.header_np)\n",
-        "\n",
         "    for old, new in zip(columns, self.header_np):\n",
         "      self.df_spark = self.df_spark.withColumnRenamed(old, new)\n",
         "\n",
@@ -428,7 +441,7 @@
       "metadata": {
         "id": "ST3U3YTccJ9M"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -544,7 +557,7 @@
         "id": "4SRGW96aw_HX",
         "outputId": "5967215e-b7e0-43b2-ea4c-0efb6d997c2d"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +716,7 @@
         "id": "9HXu6jKhxBCs",
         "outputId": "73066119-9e88-4f85-f0af-bfc82d0ad453"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +870,7 @@
         "id": "gagDHC5YxCkJ",
         "outputId": "b3244116-9ff5-45d2-9a2b-11e3d9df3ecd"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1027,7 +1040,7 @@
         "id": "yMxH7s7McRfY",
         "outputId": "1e3f680b-4300-4e84-a45a-0f8f111cf88b"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3772,6 +3785,30 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# References"
+      ],
+      "metadata": {
+        "id": "2o_EbhE5-eRp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*   [The Most Complete Guide to pySpark DataFrames](https://towardsdatascience.com/the-most-complete-guide-to-pyspark-dataframes-2702c343b2e8#728b)\n",
+        "\n",
+        "*   [pyspark.sql.DataFrame](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql/api/pyspark.sql.DataFrame.html?highlight=pyspark%20dataframe#pyspark.sql.DataFrame)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "yZc9n1RB-kcr"
+      }
     }
   ]
 }
